# PyGrid-deprecated---see-PySyft-

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  bootstrap_nodes  client_routines.py  deployment.md  dev_server.sh  docker-compose.compute-gpu.yml  docker-compose.compute.yml  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  foo.py  ipfs_grid_worker_daemon.py  main.tf  osx_installation.sh  pull_request_template.md  requirements.txt  setup.cfg  setup.py  terraform.tfstate.backup  terraform.tfvars.example
ansible/: README.md  inventory  pygrid_deploy.yaml
app/: app.py  config.py  example.py  requirements.txt
apps/worker/: pyproject.toml
apps/worker/src/: app.py
apps/worker/src/main/core/database/environment/: environment.py
apps/worker/src/main/core/nodes/: domain.py
apps/worker/src/main/core/services/: broadcast_search.py
apps/worker/tests/: test_worker.py
art/: Grid-Arch.xml
deploy/: Readme.md  deploy.sh  main.tf  variables.tf
docker/: Dockerfile  Dockerfile.gpu  Dockerfile.ipfs  Dockerfile.worker  Dockerfile.worker-gpu  jupyter_notebook_config.py  requirements.txt
documentation/: gateway_api.md  grid_node_rest_api.md  grid_node_websocket_api.md
examples/: 1 - What's Grid?.ipynb  Part 0 - Introduction to Grid  Part 0 - Introduction to Grid.ipynb  Part 0 - Introduction to PyGrid.ipynb  Part 1 - Launch a Grid Node Locally.ipynb  Part 1 - Launch a PyGrid Node Locally.ipynb  Part 1 - Quickstart Using Docker Compose to Locally Run PyGrid.ipynb  (+9 more)
(+715 files in other folders)
