[tool.poetry]
name = "openmined.worker"
version = "0.1.0"
description = "PyGrid Worker"
authors = ["Ionesio Junior <ionesiojr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
