[tool.poetry]
name = "openmined.gridworker"
version = "0.1.0"
description = "PyGrid Worker"
authors = ["OpenMined <contact@openmined.org>"]
license = "Apache-2.0"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
